--- a/notification-service/Dockerfile
+++ b/notification-service/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.8-alphine
+FROM python:3.8-alpine
 ENV PYTHONUNBUFFERED 1
 
 WORKDIR /app
@@ -6,4 +6,4 @@ COPY requirements.txt /app/requirements.txt
 RUN pip install -r requirements.txt
 COPY . /app
 
-CMD ["python", "analytics.py"]
+CMD ["python", "notification.py"]
